--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,9 @@
 		"php": ">=5.5.9",
 		"composer/installers": "~1.0.12",
 		"wp-slab/slab-core": "dev-master"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "4.8.*",
+		"mockery/mockery": "0.9.*"
 	}
 }
