--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,16 @@
 		"email": "luke@lukelanchester.com",
 		"homepage": "http://hybridlogic.co.uk"
 	}],
+	"autoload": {
+		"psr-4": {
+			"Slab\\Router\\": "src"
+		}
+	},
 	"require": {
 		"php": ">=5.5.9",
 		"composer/installers": "~1.0.12",
-		"wp-slab/slab-core": "dev-master"
+		"wp-slab/slab-core": "dev-master",
+		"nikic/fast-route": "^0.6.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "4.8.*",
